--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ config.APP_NAME }} - Confirm your account{% endblock %}
+{% block title %}Confirm your account - {{ config.APP_NAME }}{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
