--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ config.APP_NAME }} - Internal Server Error{% endblock %}
+{% block title %}Internal Server Error - {{ config.APP_NAME }}{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
