--- a/app/templates/FAQ.html
+++ b/app/templates/FAQ.html
@@ -1,13 +1,19 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}{{ config.APP_NAME }} -FAQ{% endblock %}
+{% block head %}
+    {{ super() }}
+{#    <script src="https://cdn.ckeditor.com/ckeditor5/12.2.0/classic/ckeditor.js"></script>#}
+    {{ ckeditor.load() }}
+{% endblock %}
+
+{% block title %}FAQ - {{ config.APP_NAME }}{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
         <h1>Feedback</h1>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-8">
         {{ wtf.quick_form(form) }}
     </div>
 {% endblock %}
