--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}{{ config.APP_NAME }} - Login{% endblock %}
+{% block title %}Login - {{ config.APP_NAME }}{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
