--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,14 +25,15 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
                     {% if current_user.is_authenticated %}
-                        <li><a href="{{ url_for('.maze',username=current_user.username) }}">Maze</a></li>
-                        <li><a href="{{ url_for('.user',username=current_user.username) }}">Profile</a></li>
+                        <li><a href="{{ url_for('main.maze',username=current_user.username) }}">Maze</a></li>
+                        <li><a href="{{ url_for('main.user',username=current_user.username) }}">Profile</a></li>
                     {% endif %}
-                    <li><a href="#">Client</a></li>
+                    <li><a href="{{ url_for('main.client') }}">Client</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_authenticated %}
-                        <li><a href="{{ url_for('.faq') }}">FAQ</a></li>
+                        <li><a href="{{ url_for('main.faq') }}">FAQ</a></li>
+                        <li><a href="{{ url_for('main.manage') }}">MANAGE</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <img src="{{ avatars.gravatar(current_user.email_hash, size='18') }}">
@@ -65,7 +66,7 @@
 {% block content %}
     <div class="container">
         {% for message in get_flashed_messages() %}
-            <div class="alert alert-warning">
+            <div class="alert alert-success">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                 {{ message }}
             </div>
