--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}{{ config.APP_NAME }} - Post{% endblock %}
+{% block title %}Post - {{ config.APP_NAME }}{% endblock %}
 
 {% block page_content %}
     {% include 'components/posts.html' %}
