--- a/app/templates/user_base.html
+++ b/app/templates/user_base.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ config.APP_NAME }} - {{ user.username }}{% endblock %}
+{% block title %}{{ user.username }} - {{ config.APP_NAME }}{% endblock %}
 
 
 {% block page_content %}
