--- a/app/templates/client.html
+++ b/app/templates/client.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}client - {{ config.APP_NAME }}{% endblock %}
+{% block title %}Client - {{ config.APP_NAME }}{% endblock %}
 
 {% block page_content %}
     <img src="{{ url_for('static',filename='favicon.ico') }}">
