--- a/app/templates/manage/manage_base.html
+++ b/app/templates/manage/manage_base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %} manage - {{ config.APP_NAME }} {% endblock %}
+{% block title %} Manage - {{ config.APP_NAME }} {% endblock %}
 
 {% block page_content %}
     <h1>Hello, this page is manage BI Report</h1>
