--- a/app/templates/FAQ.html
+++ b/app/templates/FAQ.html
@@ -7,7 +7,7 @@
     {{ ckeditor.load() }}
 {% endblock %}
 
-{% block title %}FAQ - {{ config.APP_NAME }}{% endblock %}
+{% block title %}{{ config.APP_NAME }} - FAQ{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
