--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Forbidden - {{ config.APP_NAME }}{% endblock %}
+{% block title %}{{ config.APP_NAME }} - Forbidden{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
