--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Page Not Found - {{ config.APP_NAME }}{% endblock %}
+{% block title %}{{ config.APP_NAME }} - Page Not Found{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
