--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,8 +33,8 @@
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_authenticated %}
                         <li><a href="{{ url_for('main.faq') }}">FAQ</a></li>
-                        <li><a href="{{ url_for('main.manage') }}">MANAGE</a></li>
-                        <li class="dropdown">
+                        <li><a href="{{ url_for('manage.index') }}">MANAGE</a></li>
+                        <li class="dropdown" >
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <img src="{{ avatars.gravatar(current_user.email_hash, size='18') }}">
                                 {{ current_user.username }} <b class="caret"></b>
