--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Edit Profile - {{ config.APP_NAME }}{% endblock %}
+{% block title %}{{ config.APP_NAME }} - Edit Profile{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
