--- a/app/templates/maze.html
+++ b/app/templates/maze.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Maze - {{ config.APP_NAME }}{% endblock %}
+{% block title %}{{ config.APP_NAME }} - Maze{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
