--- a/app/templates/manage/download.html
+++ b/app/templates/manage/download.html
@@ -1,42 +1,59 @@
 {% extends "manage/base.html" %}
 
-{% block manage %}
-    <dl>
-        <dt>Apple</dt>
-        <dd>The aaa</dd>
-        <dd>The bbb</dd>
-        <dt>Banana</dt>
-        <dd>The aaa</dd>
-        <dd>The bbb</dd>
-        <dt>Oracle</dt>
-        <dd>hongse</dd>
-    </dl>
-    <figure>
-        <figcaptionListing 23. Using the code element></figcaptionListing>
+{% block right_content %}
+    <div class="col-md-12">
+        <form method="post">
+            <div class="row">
+                <div class="form-group col-md-12">
+                    <label for="select" class="input">Select table</label>
+                    <select class="form-control" id="select">
+                        {% for table in tables %}
+                            <option>{{ table }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+            <div>
+                <button id="down" type="submit" class="btn-sm btn-primary">Download</button>
+                <button id="desc" class="btn-sm btn-success">Describe Table</button>
+                <button id="preview" class="btn-sm btn-danger">Preview Data</button>
+            </div>
+        </form>
+
+        <aside>
+            <h1>Why Fruit is Healthy</h1>
+            Here are three reasons.
+            <ol>
+                <li>Fruit contains lots of vitamins</li>
+                <li>Fruit is a source of fibre</li>
+                <li>Fruit contains few calories</li>
+            </ol>
+        </aside>
         <code>var fruits = ["aooles", "orange", "mangoes"];<br>
             document.writeln("I like " + fruits.length + " fruits");
         </code>
-    </figure>
-    <br>
-    <aside>
-        <h1>Why Fruit is Healthy</h1>
-        Here are three reasons.
-        <ol>
-            <li>Fruit contains lots of vitamins</li>
-            <li>Fruit is a source of fibre</li>
-            <li>Fruit contains few calories</li>
-        </ol>
-    </aside>
-    <code>var fruits = ["aooles", "orange", "mangoes"];<br>
-        document.writeln("I like " + fruits.length + " fruits");
-    </code>
-    <p>game over!</p>
-    <details>
-        <summary>Contents</summary>
-        This is a nav.
-        <ul>
-            <li>upload</li>
-            <li>download</li>
-        </ul>
-    </details>
+        <p>game over!</p>
+        <p name="code" class="html"><input id="fat-btn" class="btn btn-default" type="button" value='Download' οnclick="location.href='#'">
+        </p>
+        <a href="data:text/txt;charset=utf-8,测试下载纯文本" download="测试.txt">下载1</a>
+
+        <details>
+            <summary>Contents</summary>
+            This is a nav.
+            <ul>
+                <li>upload</li>
+                <li>download</li>
+            </ul>
+        </details>
+    </div>
+{% endblock %}
+
+{% block script %}
+    <script>
+        const down = document.getElementById("down");
+        down.onclick = function () {
+            window.confirm("open");
+            window.prompt("test");
+        }
+    </script>
 {% endblock %}
