--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}{{ config.APP_NAME }} - Login{% endblock %}
+{% block title %} - Login{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
@@ -16,5 +16,4 @@
             </a>
         </p>
     </div>
-
 {% endblock %}
