--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}{{ config.APP_NAME }} - Register{% endblock %}
+{% block title %} - Register{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
