--- a/app/templates/base_bak.html
+++ b/app/templates/base_bak.html
@@ -1,34 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+{% extends "bootstrap/base.html" %}
 
-    <title>{{ config.APP_NAME }}{% block title %}{% endblock %}</title>
-
-    <!--web Site ico-->
-    <link rel="shortcut icon" type="image/x-icon" href="../static/favicon.ico">
-
-    {#    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app.css') }}">    #}
+{% block head %}
+    {{ super() }}
+    {#    <link rel="shortcut icon" href="{{ url_for('static',filename='favicon.ico') }}" type="image/x-icon">#}
+    {#    <link rel="icon" href="{{ url_for('static',filename='favicon.ico') }}" type="image/x-icon">#}
+    {#    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">#}
+    {#    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app.css') }}">#}
     {# 引用尽量不要使用url_for，url_for会造成请求响应? #}
-
-    <!-- Source js -->
-    <script src="../static/app.js"></script>
-    <script src="../static/lib/js/jquery-3.4.1.js"></script>
-    <script src="../static/lib/bootstrap-3.3.7/js/bootstrap.js"></script>
-
-    <!-- Source CSS-->
-    <link rel="stylesheet" type="text/css" href="../static/app.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../static/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../static/favicon.ico">
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
-    <link rel="stylesheet" href="../static/lib/bootstrap-3.3.7/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../static/app.css">
 
-    {% block link %}{% endblock %}
-    {% block js %}{% endblock %}
-    {% block css %}{% endblock %}
-</head>
-<body>
+    <link rel="stylesheet" href="../static/lib/js/jquery-3.4.1.js">
+
+    <link rel="stylesheet" href="../static/lib/bootstrap-3.3.7/js/bootstrap.js">
+    <link rel="stylesheet" href="../static/lib/bootstrap-3.3.7/css/bootstrap.css">
+{% endblock %}
+
+{% block title %}{% endblock %}
+
 {% block navbar %}
     <div class="navbar navbar-inverse" role="navigation">
         <div class="container">
@@ -95,6 +86,7 @@
     </div>
 {% endblock %}
 
-{% block script %}{% endblock %}
-</body>
-</html>
+{% block scripts %}
+    {{ super() }}
+    {{ moment.include_moment() }}
+{% endblock %}
