--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,13 +1,27 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}{{ config.APP_NAME }} - Edit Profile{% endblock %}
+{% block title %} - Edit Profile{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
         <h1>Edit Your Profile</h1>
     </div>
-    <div class="col-md-4">
-        {{ wtf.quick_form(form) }}
+    <div class="col-md-6">
+        <form method="post">
+            <div class="form-group col-md-8">
+                <label for="real_name">Real name</label>
+                <input type="text" class="form-control" id="real_name" name="real_name" value="{{ user.real_name }}">
+            </div>
+            <div class="form-group col-md-8">
+                <label for="location">Location</label>
+                <input type="text" class="form-control" id="location" name="location" value="{{ user.location }}"></div>
+            <div class="form-group col-md-8">
+                <label for="about_me">About me</label>
+                <textarea class="form-control" rows="4" wrap="soft" id="about_me" name="about_me">{{ user.about_me }}</textarea>
+            </div>
+            <div class="form-group col-md-12">
+                <button type="submit" class="btn btn-success">Update</button>
+            </div>
+        </form>
     </div>
 {% endblock %}
