--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}{{ config.APP_NAME }} - 迷宫里的秘密 {% endblock %}
+{% block title %} - 迷宫里的秘密 {% endblock %}
 
 {% block page_content %}
     <div class="page-header">
@@ -18,23 +17,38 @@
             <p>Nice to meet you !</p>
         {% endif %}
     </div>
-    <div class="page-header">
-        {{ wtf.quick_form(form) }}
-    </div>
+    <form method="post">
+        <div class="form-group">
+            <label for="mind">What's on your mind?</label>
+            <textarea class="form-control" rows="2" wrap="soft" id="mind" name="mind" required></textarea>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-danger">Submit</button>
+        </div>
+    </form>
+
 
     <div class="post-tabs">
-        <ul class="nav nav-tabs">
-            {#            <li{% if not show_followed %} class="active"{% endif %}><a href="{{ url_for('.show_all') }}">All</a></li>#}
-            {#            {% if current_user.is_authenticated %}#}
-            {#                <li{% if show_followed %} class="active"{% endif %}><a href="{{ url_for('.show_followed') }}">Followers</a></li>#}
-            {#            {% endif %}#}
-            <li{% if session.is_followings==0 %} class="active"{% endif %}><a href="{{ url_for('.show_all') }}">All</a></li>
+        <ul class="nav nav-tabs" id="nav">
+            <li {% if session.is_followings==0 %} class="active"{% endif %}><a href="{{ url_for('.show_all') }}">All</a></li>
             {% if current_user.is_authenticated %}
-                <li{% if session.is_followings==1 %} class="active"{% endif %}><a href="{{ url_for('.show_followings') }}">Followers</a></li>
+                <li {% if session.is_followings==1 %} class="active"{% endif %}><a href="{{ url_for('.show_followings') }}">Followers</a></li>
             {% endif %}
         </ul>
         {% include 'components/posts.html' %}
     </div>
     <p><br/>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
     <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
+{% endblock %}
+
+{% block script %}
+{#    <script>#}
+{#        const nav = document.getElementById("nav");#}
+{#        for (let i = 0; i < nav.childElementCount; i++) {#}
+{#            console.log(i)#}
+{#            nav.childNodes[i].onclick = function (e) {#}
+{#                e.target.classList.toggle("active");#}
+{#            }#}
+{#        }#}
+{#    </script>#}
 {% endblock %}
