--- a/app/templates/maze.html
+++ b/app/templates/maze.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
-{% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}{{ config.APP_NAME }} - Maze{% endblock %}
+{% block title %} - Maze{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
