--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,15 +1,21 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}{{ config.APP_NAME }} - Post{% endblock %}
+{% block title %} - Post{% endblock %}
 
 {% block page_content %}
     {% include 'components/posts.html' %}
     <h4 id="comments">Comments</h4>
     {#    {% if current_user.can(Permission.COMMENT) %}#}
-    <div class="comment-form">
-        {{ wtf.quick_form(form) }}
-    </div>
+{#    <div class="comment-form">#}
+        <form method="post">
+            <div class="form-group">
+                <input name="comment" type="text" class="form-control" maxlength="140" required>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-sm btn-danger">Submit</button>
+            </div>
+        </form>
+{#    </div>#}
     {#    {% endif %}#}
     {% include 'components/comments.html' %}
     {% include 'components/pagination.html' %}
