--- a/app/templates/FAQ.html
+++ b/app/templates/FAQ.html
@@ -1,19 +1,31 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 
-{% block head %}
-    {{ super() }}
-{#    <script src="https://cdn.ckeditor.com/ckeditor5/12.2.0/classic/ckeditor.js"></script>#}
-    {{ ckeditor.load() }}
-{% endblock %}
-
-{% block title %}{{ config.APP_NAME }} - FAQ{% endblock %}
+{% block title %} - FAQ{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
         <h1>Feedback</h1>
     </div>
-    <div class="col-md-8">
-        {{ wtf.quick_form(form) }}
-    </div>
+    <form class="col-md-8">
+        <div class="row">
+            <div class="form-group col-md-9">
+                <label for="subject">主题</label>
+                <input type="text" class="form-control" placeholder="Subject" id="subject" name="subject" required>
+            </div>
+            <div class="form-group col-md-3 pull-right">
+                <label for="subjectType">分类</label>
+                <select class="form-control" id="subjectType" name="subjectType">
+                    <option>功能建议</option>
+                    <option>BUG反馈</option>
+                    <option>其他</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="content">内容</label>
+            <textarea rows="6" wrap="soft" class="form-control" placeholder="请输入您想要反馈的内容" id="content" name="content" required></textarea>
+        </div>
+        <input type="submit" class="btn btn-primary" value="Submit">
+    </form>
+    <br/>
 {% endblock %}
