--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %} - Login{% endblock %}
 
@@ -7,13 +6,31 @@
     <div class="page-header">
         <h1>Login</h1>
     </div>
-    <div class="col-md-4">
-        {{ wtf.quick_form(form) }}
+    <form method="post" class="col-md-4">
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" placeholder="Email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" placeholder="Password" id="password" name="password" required>
+        </div>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox">Remember me
+            </label>
+        </div>
+        <button type="submit" class="btn btn-primary">Log in</button>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
         <p>
             New user?
             <a href="{{ url_for('auth.register') }}">
                 Click here to register
             </a>
         </p>
-    </div>
+    </form>
+    <br/>
 {% endblock %}
