--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %} - Register{% endblock %}
 
@@ -7,7 +6,24 @@
     <div class="page-header">
         <h1>Register</h1>
     </div>
-    <div class="col-md-4">
-        {{ wtf.quick_form(form) }}
-    </div>
+    <form method="post" class="col-md-4">
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" placeholder="Email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" placeholder="Username" id="username" name="username" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" placeholder="Password" id="password" name="password" required>
+        </div>
+        <div class="form-group">
+            <label for="confirmPassword">Confirm password</label>
+            <input type="password" class="form-control" placeholder="Confirm password" id="confirmPassword" name="confirmPassword" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
+    </form>
+    <br/>
 {% endblock %}
